<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity"
android:background="@color/mi_azul">

    <ImageView
            android:id="@+id/imagen_estatus"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:src="@drawable/paloma_verde"
            android:visibility="gone"
    />

    <EditText
            android:id="@+id/editText_Nombres"
            android:hint="@string/hint_nombre"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/gris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="text"
            android:drawableLeft="@drawable/persona"
            android:drawablePadding="12dp"
    />
    <EditText
            android:id="@+id/editText_Apellidos"
            android:hint="@string/hint_apellido"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/gris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:maxLength="10"
            android:layout_marginHorizontal="24dp"
            android:inputType="text"
            android:drawableLeft="@drawable/persona"
            android:drawablePadding="12dp"
    />
    <EditText
            android:id="@+id/editText_Telefono"
            android:hint="@string/hint_telefono"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/gris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:maxLength="10"
            android:layout_marginHorizontal="24dp"
            android:inputType="phone"
            android:drawableLeft="@drawable/celular"
            android:drawablePadding="12dp"
    />
    <EditText
            android:id="@+id/editText_Correo"
            android:hint="@string/hint_correo"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/gris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:maxLength="10"
            android:layout_marginHorizontal="24dp"
            android:inputType="text"
            android:drawableLeft="@drawable/correo"
            android:drawablePadding="12dp"
    />
    <Button
            android:id="@+id/btnAcceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/mexicanPink"
            android:textColor="@color/gris"
            android:text="@string/accept_button"
            android:layout_marginTop="48dp"
    />
</LinearLayout>


<!--<TextView
            android:id="@+id/text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_text"
            android:textStyle="bold"
            android:textSize="18sp"
    />

    <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/mexicanPink"
            android:text="@string/accept_button"
            android:layout_marginTop="48dp"
    /> -->

<!--<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


</androidx.constraintlayout.widget.ConstraintLayout>-->

<!--<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">
    <View
            android:id="@+id/red"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#FFEA0505"
            android:layout_centerInParent="true"
    />
    <View
            android:id="@+id/pink"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#EA05B1"
            android:layout_centerInParent="true"
            android:layout_above="@+id/red"
    />
    <View
            android:id="@+id/blue"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#0537EA"
            android:layout_above="@+id/yellow"
            android:layout_centerInParent="true"
    />
    <View
            android:id="@+id/green"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#FF55EA05"
            android:layout_above="@+id/blue"
            android:layout_centerInParent="true"
    />
    <View
            android:id="@+id/yellow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#FFFFDB28"
            android:layout_above="@+id/pink"
            android:layout_centerInParent="true"
    />

</RelativeLayout>-->